# ha-agent-rs

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-cd.yml  tests.yml
src/: agent_state.rs  config.rs  connection.rs  main.rs  watcher.rs
src/monitor/: microphone.rs  mod.rs  webcam.rs
